# clubs

./: .gitignore  MANIFEST.in  README.md  environment.yml  example.py  mypy.ini  pyproject.toml  run_local_tests.sh  setup.py
clubs/: __init__.py  configs.py
clubs/render/: graphic.py
